source/style.css
/* ... */
article .content blockquote footer a:hover {
	color:#999;
	background-image:linear-gradient(transparent,transparent 4px,#999 4px,#999);
}
article .content blockquote footer cite:before {
	content:"ÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Â ÃƒÂ¢Ã¢â€šÂ¬Ã¢â€žÂ¢ÃƒÆ’Ã†â€™ÃƒÂ¢Ã¢â€šÂ¬Ã‚Â ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â‚¬Å¡Ã‚Â¬ÃƒÂ¢Ã¢â‚¬Å¾Ã‚Â¢ÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â‚¬Å¡Ã‚Â¬Ãƒâ€¦Ã‚Â¡ÃƒÆ’Ã†â€™ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¡ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Â ÃƒÂ¢Ã¢â€šÂ¬Ã¢â€žÂ¢ÃƒÆ’Ã†â€™ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¡ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â‚¬Å¡Ã‚Â¬Ãƒâ€¦Ã‚Â¡ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¬ÃƒÆ’Ã†â€™ÃƒÂ¢Ã¢â€šÂ¬Ã‚Â¦ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¡ÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â‚¬Å¡Ã‚Â¬Ãƒâ€¦Ã‚Â¡ÃƒÆ’Ã†â€™ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¡ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¬ÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Â ÃƒÂ¢Ã¢â€šÂ¬Ã¢â€žÂ¢ÃƒÆ’Ã†â€™ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¡ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¡Ãƒâ€šÃ‚Â¬ÃƒÆ’Ã¢â‚¬Â¦Ãƒâ€šÃ‚Â¡ÃƒÆ’Ã†â€™ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¡ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¬ÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â‚¬Å¡Ã‚Â¬Ãƒâ€¦Ã‚Â¡ÃƒÆ’Ã†â€™ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¡ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â";
	padding:0 0.5em;
}
article .content .pullquote {
	text-align:left;
	width:45%;
	margin:0;
}
article .content .pullquote.left {
	margin-left:0.5em;
	margin-right:1em;
}
article .content .pullquote.right {
	margin-right:0.5em;
	margin-left:1em;
}
article .content .caption {
	color:color-grey;
	display:block;
	font-size:0.9em;
	margin-top:0.5em;
	position:relative;
	text-align:center;
}
.posttitle {
	text-transform:none;
	font-size:1.5em;
	line-height:1.25;
}
.article-tag .tag-link:before {
	content:"#";
}
@media (min-width:480px) {
	.article-tag {
	display:inline;
}
.article-tag:before {
	content:"|";
}
}#archive .post-list {
	padding:0;
}
#archive .post-list .post-item {
	list-style-type:none;
	margin-left:0;
	margin-bottom:1rem;
}
#archive .post-list .post-item .meta {
	display:block;
	font-size:14px;
	color:#666;
	min-width:100px;
	margin-right:16px;
}
@media (min-width:480px) {
	#archive .post-list .post-item {
	display:flex;
	margin-left:1rem;
	margin-bottom:5px;
}
#archive .post-list .post-item .meta {
	text-align:left;
}
}.blog-post-comments {
	margin-top:4rem;
}
#footer {
	padding-top:10px;
	padding-bottom:10px;
	color:#666;
	font-size:11px;
	max-width:700px;
	width:100%;
	margin:0 auto 1rem auto;
	vertical-align:top;
	text-align:center;
}
#footer ul {
	margin:0;
	padding:0;
	list-style:none;
}
#footer li {
	display:inline-block;
	vertical-align:middle;
	margin-right:15px;
	border-right:1px solid #4a4a4a;
}
#footer li a {
	margin-right:15px;
}
#footer li:last-child {
	border-right:0;
	margin-right:0;
}
#footer li:last-child a {
	margin-right:0;
}
#footer a {
	color:#666;
}
#footer a:hover {
	color:#999;
}
#footer .footer-left {
	height:20px;
	line-height:20px;
	vertical-align:middle;
}
@media (min-width:39rem) {
	#footer {
	padding-top:20px;
	padding-bottom:20px;
}
#footer .footer-left {
	float:left;
}
#footer .footer-right {
	float:right;
}
}.pagination {
	display:inline-block;
	margin-top:2rem;
	text-align:center;
	width:100%;
}
.pagination .page-number {
	color:#c9cacc;
	font-size:0.8rem;
}
.pagination a {
	color:#c9cacc;
	padding:4px 6px;
	text-decoration:none;
	border-radius:5px;
	background-color:#2bbc8a;
	background-image:none;
}
.pagination a:hover {
	background-image:none;
}
.pagination a:hover:not(.active) {
	color:#eee;
}
.highlight {
	color:#d1d9e1;
	background:#474949;
}
.highlight .code .comment,.highlight .code .quote {
	color:#969896;
	font-style:italic;
}
.highlight .code .keyword,.highlight .code .selector-tag,.highlight .code .literal,.highlight .code .type,.highlight .code .addition {
	color:#c9c;
}
.highlight .code .number,.highlight .code .selector-attr,.highlight .code .selector-pseudo {
	color:#f99157;
}
.highlight .code .string,.highlight .code .doctag,.highlight .code .regexp {
	color:#8abeb7;
}
.highlight .code .title,.highlight .code .name,.highlight .code .section,.highlight .code .built_in {
	color:#b5bd68;
}
.highlight .code .variable,.highlight .code .template-variable,.highlight .code .selector-id,.highlight .code .class .title {
	color:#fc6;
}
.highlight .code .section,.highlight .code .name,.highlight .code .strong {
	font-weight:bold;
}
.highlight .code .symbol,.highlight .code .bullet,.highlight .code .subst,.highlight .code .meta,.highlight .code .link {
	color:#f99157;
}
.highlight .code .deletion {
	color:#dc322f;
}
.highlight .code .formula {
	background:#eee8d5;
}
.highlight .code .attr,.highlight .code .attribute {
	color:#81a2be;
}
.highlight .code .emphasis {
	font-style:italic;
}
pre {
	font-family:"Menlo","Meslo LG",monospace;
	font-size:13px;
	padding:10px 15px;
	padding-bottom:0;
	line-height:22px;
	-webkit-border-radius:4px;
	border-radius:4px;
	border:1px dotted #666;
	overflow-x:auto;
}
code {
	-webkit-border-radius:2px;
	border-radius:2px;
	padding:0 5px;
	background-color:darkslategrey;
}
pre code {
	border:none;
	display:block;
	padding:0;
}
.highlight {
	font-family:"Menlo","Meslo LG",monospace;
	background:#212326;
	-webkit-border-radius:4px;
	border-radius:4px;
	padding:10px 15px;
	overflow-x:auto;
	margin:1rem 0 1rem 0;
}
.highlight figcaption {
	zoom:1;
	margin:-5px 0 5px;
	font-size:0.9em;
	color:#999;
}
.highlight figcaption a {
	float:right;
}
.highlight figcaption:before,.highlight figcaption content:"" {
	display:table;
}
.highlight figcaption:after {
	clear:both;
}
.highlight pre {
	padding:0;
	border:none;
	background:none;
}
.highlight table {
	width:auto;
}
.highlight td.gutter {
	text-align:right;
	padding-right:20px;
	display:none;
}
.fancybox-close,.fancybox-close:hover {
	border:none;
}
#rewardButton {
	cursor:pointer;
	border:0;
	outline:0;
	border-radius:100%;
	padding:0;
	margin:0;
	letter-spacing:normal;
	text-transform:none;
	text-indent:0px;
	text-shadow:none;
}
/* ... */

